Fix Export/Import tests with Linux folder names